<resources>
    <string name="app_name">Leaf Garden</string>
    <string name="google">Entrar com o Google</string>
    <string name="entrar">Entrar</string>
    <string name="novaConta">Cadastre-se</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="idade">Idade</string>
    <string name="Regiao">Região</string>
    <string name="criar">Criar</string>
    <string name="conta">Conta</string>
    <string name="jardim">Meu Jardim</string>
    <string name="plantas">Plantas</string>
    <string name="config">Histórico</string>
    <string name="escolha">Escolha uma planta</string>
    <string name="adcJardim">+ Jardim</string>
    <string name="desc">Descrição</string>
    <string name="local">Local Adequado</string>
    <string name="temperatura">Temperatura</string>
    <string name="adc">Adicionar planta</string>
    <string name="plus">+</string>
    <string name="minhasPlantas">Minhas Plantas</string>
    <string name="umidade">Umidade</string>
    <string name="nomePlant">Nome da Planta</string>
    <string name="esqueci">Resetar senha</string>
    <string name="esqueciSenha">Esqueci minha senha!</string>
    <string name="enviar">Enviar</string>
    <!--PLANTA -->
    <string name="descricao">Descrição</string>
    <string name="locAdequado">Local Adequado</string>
    <string name="tempAmbiente">Temperatura Ambiente</string>
    <string name="umidadeAmbiente">Umidade Ambiente</string>
    <string name="tempSolo">Temperatura Solo</string>
    <string name="umidadeSolo">Umidade Solo</string>
    <string name="lumi">Luminosidade</string>
    <string name="cadastrarPlanta">Cadastrar Plantas</string>
    <string name="adcFoto">Foto</string>
    <string name="dica">Dicas</string>
    <string name="editar">Editar</string>
    <string name="nConta">Não tem uma conta?</string>
    <string name="sair">Sair</string>
    <string name="sobre">Sobre</string>
    <string name="bemV">Bem-Vindo!</string>
    <string name="cadP">Cadastrar planta</string>
    <string-array name="regiao">
        <item>Selecione sua Região</item>
        <item>Norte</item>
        <item>Nordeste</item>
        <item>Centro-Oeste</item>
        <item>Sudeste</item>
        <item>Sul</item>
    </string-array>

</resources>
