<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastraPlanta">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDescricaoPlanta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/descricao"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextDescricaoPlanta"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_above="@+id/buttonCadastrarPlanta"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editTextSensorTempAmbiente"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_above="@+id/editTextSensorTempAmbiente"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tempAmbiente"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextSensorTempSolo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_above="@+id/editTextSensorTempSolo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tempSolo" />

    <EditText
        android:id="@+id/editTextSensorUmidadeSolo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextSensorUmidadeAmbiente"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView15"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_above="@+id/editTextSensorUmidadeSolo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/umidadeSolo"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_above="@+id/editTextSensorUmidadeAmbiente"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/umidadeAmbiente" />

    <EditText
        android:id="@+id/editTextLocAdequado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="210dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextLocAdequado"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/locAdequado"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageViewPlanta"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/buttonImagemPlanta"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/conta" />

    <EditText
        android:id="@+id/editTextLuminosidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView18"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/imageViewPlanta"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextLuminosidade"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/imageViewPlanta"
        android:text="@string/lumi"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editTextNomePlanta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView19"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/imageViewPlanta"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="251dp"
        android:layout_height="20dp"
        android:layout_above="@+id/editTextNomePlanta"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/imageViewPlanta"
        android:gravity="center"
        android:text="@string/nomePlant"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonImagemPlanta"
        android:layout_width="84dp"
        android:layout_height="60dp"
        android:layout_above="@+id/textView18"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/editTextLuminosidade"
        android:text="@string/adcFoto" />

    <Button
        android:id="@+id/buttonCadastrarPlanta"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cadastrarPlanta"
        android:textSize="14sp" />

</RelativeLayout>