<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    tools:context=".Activity.ResetarSenha">

    <Button
        android:id="@+id/buttonEnviarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="194dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/primary_light"
        android:text="@string/enviar"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextResetarEmail"
        app:layout_constraintVertical_bias="0.168" />

    <EditText
        android:id="@+id/editTextResetarEmail"
        android:layout_width="285dp"
        android:layout_height="54dp"
        android:layout_above="@+id/buttonEnviarEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_light"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnviarEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResetEmail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewResetEmail"
        android:layout_width="221dp"
        android:layout_height="60dp"
        android:layout_above="@+id/editTextResetarEmail"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/esqueci"
        android:textAlignment="center"
        android:textColor="@color/primary_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextResetarEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>