<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background2"
    tools:context=".TelaMenu">


    <TextView
        android:layout_width="243dp"
        android:layout_height="55dp"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="117dp"
        android:layout_marginBottom="236dp"
        android:text="Bem Vindo!"
        android:textColor="@color/cardview_light_background"
        android:textSize="35dp" />

    <Button
        android:id="@+id/buttonConta"
        android:layout_width="168dp"
        android:layout_height="161dp"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/background_logo"
        android:drawableBottom="@drawable/conta1" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonPlantas"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/rounded_input_text"
        android:text="@string/conta"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonMeuJardim"
        android:layout_width="166dp"
        android:layout_height="159dp"
        android:layout_above="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_logo"
        android:drawableTop="@drawable/jardim1" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonHistorico"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="61dp"
        android:background="@drawable/rounded_input_text"
        android:text="@string/jardim"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonHistorico"
        android:layout_width="156dp"
        android:layout_height="155dp"
        android:layout_above="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/background_logo"
        android:drawableBottom="@drawable/historico1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="122dp"
        android:text="@string/config"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_input_text" />

    <Button
        android:id="@+id/buttonPlantas"
        android:layout_width="wrap_content"
        android:layout_height="155dp"
        android:layout_above="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/background_logo"
        android:drawableTop="@drawable/planta1" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="123dp"
        android:background="@drawable/rounded_input_text"
        android:text="@string/plantas"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />




</RelativeLayout>